[package]
name = "blackfish"
version = "0.1.0"
authors = ["Andre Popovitch <andre@popovit.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", rev = "bc4fe9b186db3f32eef38fc4241289df480fa949" }
rand = "0.7.3"
ndarray = "0.14.0"
frunk = "0.3.1"
slotmap = "1.0"
proptest = "1.0"
velcro = "0.5.3"
uuid = { version = "0.8", features = ["serde", "v4"] }