[package]
name = "blackfish"
version = "0.1.0"
authors = ["Andre Popovitch <andre@popovit.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/anchpop/bevy", rev = "c22b434ce585bf568ccbdaba0316fa579e0e150b" }
rand = "0.7.3"
ndarray = "0.14.0"
frunk = "0.3.1"
slotmap = "1.0"
proptest = "1.0"
velcro = "0.5.3"
uuid = { version = "0.8", features = ["serde", "v4"] }
midir = "0.7.0"
uom = "0.31.1"
vek = "0.15.0"
non-empty-collections = "0.1.9"
num-traits = "0.1.43"
pretty_assertions = "0.7.1"
petgraph="0.5.1"